--- a/config/upfcfg-2.yaml
+++ b/config/upfcfg-2.yaml
@@ -12,18 +12,16 @@ configuration:
   packetBufferHoldTime: 30
 
   pfcp:
-    - addr: upf.free5gc.org
+    - addr: upf-2.free5gc.org
 
   gtpu:
-    - addr: upf.free5gc.org
+    - addr: upf-2.free5gc.org
     # [optional] gtpu.name
     # - name: upf.5gc.nctu.me
     # [optional] gtpu.ifname
     # - ifname: gtpif
 
   dnn_list:
-    - dnn: internet
-      cidr: 10.60.0.0/16
     - dnn: internet
       cidr: 10.61.0.0/16
       # [optional] apn_list[*].natifname
